--- a/app/src/main/res/layout/activity_baked.xml
+++ b/app/src/main/res/layout/activity_baked.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,102 +9,191 @@
 
     <TextView
         android:id="@+id/txt_hh"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="ชม"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="96dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="ชม"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
         app:layout_constraintBottom_toTopOf="@+id/edt_hh"
-        app:layout_constraintVertical_bias="0.714" />
+        app:layout_constraintEnd_toStartOf="@+id/txt_mm"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_mm"
-        android:layout_width="25dp"
-        android:layout_height="17dp"
-        android:text="นาที"
-        app:layout_constraintStart_toEndOf="@+id/txt_hh"
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="68dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.76" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="นาที"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/edt_mm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.76"
+        app:layout_constraintStart_toEndOf="@+id/txt_hh"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edt_hh"
-        android:layout_width="147dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="-8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="number"
+        android:selectAllOnFocus="true"
         android:singleLine="true"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/space"
         app:layout_constraintEnd_toStartOf="@+id/edt_mm"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="119dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_hh"
+        tools:text="99" />
 
     <EditText
         android:id="@+id/edt_mm"
-        android:layout_width="136dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="-8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="number"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/space"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edt_hh"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="119dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_mm"
+        tools:text="99" />
 
     <Space
+        android:id="@+id/space"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="180dp"
-        android:id="@+id/space" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txt_temp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="อุหภูมิ"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="193dp" />
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/edt_temp"
+        app:layout_constraintEnd_toStartOf="@+id/txt_humidity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/space" />
 
     <TextView
         android:id="@+id/txt_humidity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="ความชื่น"
-        tools:layout_editor_absoluteX="232dp"
-        tools:layout_editor_absoluteY="193dp" />
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/edt_humidity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txt_temp"
+        app:layout_constraintTop_toBottomOf="@+id/space" />
 
     <EditText
         android:id="@+id/edt_temp"
-        android:layout_width="186dp"
-        android:layout_height="54dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="232dp" />
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/btn_start"
+        app:layout_constraintEnd_toStartOf="@+id/edt_humidity"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_temp"
+        tools:text="99" />
 
     <EditText
         android:id="@+id/edt_humidity"
-        android:layout_width="184dp"
-        android:layout_height="41dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="200dp"
-        tools:layout_editor_absoluteY="235dp" />
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toTopOf="@+id/btn_start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/edt_temp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_humidity"
+        tools:text="99" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text=":"
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_hh"
+        app:layout_constraintEnd_toStartOf="@+id/edt_mm"
+        app:layout_constraintStart_toEndOf="@+id/edt_hh"
+        app:layout_constraintTop_toTopOf="@+id/edt_mm" />
+
 
     <Button
         android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:text="เริ่ม"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="393dp" />
+        android:textSize="@dimen/dimens_btn_main"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
