--- a/app/src/main/res/layout/activity_plant.xml
+++ b/app/src/main/res/layout/activity_plant.xml
@@ -1,99 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txt_hh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ชม"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="68dp" />
+    <include layout="@layout/item_time" />
 
-    <TextView
-        android:id="@+id/txt_mm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="นาที"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="68dp" />
+    <include layout="@layout/item_temp_humidity" />
 
-    <EditText
-        android:id="@+id/edt_hh"
-        android:layout_width="147dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="-8dp"
-        android:ems="10"
-        android:inputType="number"
-        android:singleLine="true"
-        app:layout_constraintEnd_toStartOf="@+id/edt_mm"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="119dp" />
-
-    <EditText
-        android:id="@+id/edt_mm"
-        android:layout_width="136dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="-8dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/edt_hh"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="119dp" />
-
-    <Space
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="177dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/txt_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="อุหภูมิ"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="193dp" />
+        <Button
+            android:id="@+id/btn_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:gravity="bottom"
+            android:text="เริ่ม"
+            android:textAlignment="center"
+            android:textSize="@dimen/dimens_btn_main" />
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/txt_humidity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ความชื่น"
-        tools:layout_editor_absoluteX="232dp"
-        tools:layout_editor_absoluteY="193dp" />
 
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="186dp"
-        android:layout_height="54dp"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="232dp" />
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="184dp"
-        android:layout_height="41dp"
-        android:ems="10"
-        android:inputType="number"
-        tools:layout_editor_absoluteX="200dp"
-        tools:layout_editor_absoluteY="235dp" />
-
-    <Button
-        android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="เริ่ม"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="393dp" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.LinearLayoutCompat>
