--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/item_date_time" />
+    <include layout="@layout/item_time" />
 
-    <include layout="@layout/item_temp" />
+    <include layout="@layout/item_temp_humidity" />
 
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
