--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -35,13 +35,13 @@
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="@dimen/dimens_btn_main"
-        app:layout_constraintBottom_toTopOf="@+id/bnStatus"
+        app:layout_constraintBottom_toTopOf="@+id/btnStatus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBaked" />
 
     <Button
-        android:id="@+id/bnStatus"
+        android:id="@+id/btnStatus"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bnStatus" />
+        app:layout_constraintTop_toBottomOf="@+id/btnStatus" />
 
 
 </android.support.constraint.ConstraintLayout>
